--- a/ms-products/src/main/resources/application.yaml
+++ b/ms-products/src/main/resources/application.yaml
@@ -1,7 +1,5 @@
 server:
-  port: 8080
-  servlet:
-    context-path: /api/products/
+  port: 8082
 
 spring:
   application:
@@ -9,9 +7,10 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/msproducts
     username: root
-    password: m@rgarida2018
+    password: root
   jpa:
     open-in-view: true
+    hibernate.ddl-auto: update
 
 logging:
   level:
