--- a/ms-products/src/main/resources/application.yaml
+++ b/ms-products/src/main/resources/application.yaml
@@ -7,7 +7,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/msproducts
     username: root
-    password: root
+    password: m@rgarida2018
   jpa:
     open-in-view: true
     hibernate.ddl-auto: update
@@ -15,4 +15,3 @@ spring:
 logging:
   level:
     web: debug
-
